k8s/prod/stable/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-ml-stable   # ✅ Deployment 名
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1   # 更新时最多允许 1 个 Pod 不可用
      maxSurge: 1         # 更新时最多可额外多创建 1 个新 Pod
  selector:
    matchLabels:
      app: fastapi-ml   # ✅ selector 标签
      component: inference-api
      track: stable
  template:
    metadata:
      labels:
        app: fastapi-ml   # ✅ Pod 标签（必须和上面一致）
        component: inference-api
        version: week6-day5
        track: stable
    spec:
      containers:
        - name: fastapi-ml   # ✅ 容器名
          image: fastapi-ml-example:week7-day1   # ✅ 镜像名
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
              
          # readinessProbe: Pod 是否“准备好接收流量”
          # 如果失败，Pod 不会被杀掉，但不会加入 Service 后端
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          # livenessProbe: Pod 是否“仍然活着”
          # 如果持续失败，Kubernetes 会重启容器
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
