k8s/prod/stable/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-ml-stable
  labels:
    app: fastapi-ml
    monitoring: enabled
spec:
  type: ClusterIP
  selector:
    app: fastapi-ml
    component: inference-api
    track: stable
  ports:
    - protocol: TCP
      name: http
      port: 8000
      targetPort: 8000
